--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 title = "Mariage"
-baseURL = "http://localhost:1313/"
+baseURL = "https://dorraaya.github.io/"
 languageCode = "en-us"
 theme = "ananke"
 
