--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 title = "Mariage"
-baseURL = "https://dorraaya.github.io/"
+baseURL = "https://11042020.github.io/"
 languageCode = "en-us"
-theme = "ananke"
+theme = "ananke2"
 
 MetaDataFormat = "yaml"
 DefaultContentLanguage = "en"
