--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 # Main config file for icon theme.
 theme = "hugo-icon"
 baseURL = "https://11042020.github.io/"
-languageCode = "en-AU"
+languageCode = "fr-FR"
 title = "Mariage Dorra & Dhia"
 
 # Metadata
@@ -18,6 +18,7 @@ title = "Mariage Dorra & Dhia"
 # Navigation section
 [params.nav]
   services = "Infos"
+  #logo = "images/hero_bg.jpg"
 
 
 # Services section
